<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Xác nhận</string>
    <string name="account">Tài khoản</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="add">Thêm hàng hoá</string>
    <string name="add_parcel">Thêm bưu gửi</string>
    <string name="add_receiver_point">Thêm điểm dừng</string>
    <string name="address_organization_collect_info">5. Địa chỉ của đơn vị thu thập và quản lý thông tin</string>
    <string name="address_organization_collect_info1">- Tổng Công ty Chuyển phát nhanh Bưu điện – CTCP</string>
    <string name="address_organization_collect_info2">- Trụ sở chính: Số 1 Tân Xuân, Xuân Đỉnh, Bắc Từ Liêm, Hà Nội</string>
    <string name="address_organization_collect_info3">- Điện thoại: 1900545433</string>
    <string name="address_organization_collect_info4">- Email: cskh@ems.com.vn</string>
    <string name="all">Tất cả</string>
    <string name="app_name">EMSGO</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Áp dụng</string>
    <string name="approval">Đã duyệt</string>
    <string name="articles.browse">Search for an article</string>
    <string name="articles.counts.many">%1$d articles</string>
    <string name="articles.counts.one">%1$d article</string>
    <string name="articles.emptystate">Our FAQ section is yet under construction. Do scoot back later!</string>
    <string name="articles.emptystate.text">"Looks like there aren't any matches to the search word you entered!"</string>
    <string name="articles.feedback.thanks">Thanks for your feedback!</string>
    <string name="articles.name">FAQ</string>
    <string name="articles.pursuechat">Chat</string>
    <string name="articles.recent.search">Recent Searches</string>
    <string name="articles.recent.viewed">Recently Viewed</string>
    <string name="articles.startchat">Start Chat</string>
    <string name="articles.views.many">%1$d views</string>
    <string name="articles.views.one">%1$d view</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="business_license">0101826868 do Phòng ĐKKD Thành phố HN Cấp ngày: 21/05/2019</string>
    <string name="button_text_fill_address">Nhập địa chỉ</string>
    <string name="button_text_gg_map_sugest">Gợi ý địa chỉ</string>
    <string name="cancel">Hủy bưu gửi</string>
    <string name="cancel_">Hủy</string>
    <string name="carrier_network1">Mạng đường thư cấp 1 hiện có 62 đường thư chuyên ngành và phụ trợ, hàng ngày tổ chức 120 chuyến thư với tổng số gần 41.000 km xe lăn bánh/ngày và 3 đường thư xã hội thực hiện vận chuyển giữa các trung tâm khai thác vùng với các trung tâm khai thác tỉnh; 47 đường thư máy bay vận chuyển bưu gửi, 32 đường thư máy bay vận chuyển bưu gửi EMS, giao nhận với 14 sân bay trong nước.</string>
    <string name="carrier_network2">Mạng đường thư cấp 2 thực hiện vận chuyển giữa các trung tâm khai thác tỉnh và các huyện với 380 tuyến đường thư, tổng chiều dài 28.000 km, giao nhận với gần 1.600 bưu cục.</string>
    <string name="carrier_network3">Mạng đường thư cấp 3: gần 3.600 tuyến đường thư, tổng chiều dài 72.000 km.</string>
    <string name="carrier_network4">Mạng đường thư quốc tế gồm 122 đường bay trực tiếp trao đổi chuyến thu với 102 bưu chính các quốc gia và vùng lãnh thổ).</string>
    <string name="content_dialog_report">Bạn có muốn báo cáo một vấn đề kĩ thuật của app hoặc góp ý cho chúng tôi có thể cải tiến app?</string>
    <string name="employees1">Với gần 2.300 CBCNV tại Hà Nội, Đà Nẵng, TP. Hồ Chí Minh và các nhân viên kinh doanh tại một số thị trường trọng điểm trên toàn mạng lưới, Tổng công ty đã xây dựng được nguồn nhân lực chất lượng cao, tinh thông nghiệp vụ, giàu kinh nghiệm và nhiệt huyết với nghề.</string>
    <string name="employees2">Tổng công ty luôn xây dựng các cơ chế, chính sách thu hút lực lượng lao động chất lượng cao với các chính sách đãi ngộ phù hợp để khuyến khích và phát huy tối đa năng lực, tạo điều kiện để các cá nhân phát triển và yên tâm cống hiến.</string>
    <string name="employees3">Bên cạnh đó, các cơ chế chính sách về lao động tiền lương của người lao động trong toàn Tổng công ty cũng liên tục được cải tiến, hướng tới người lao động để đảm bảo công việc, quyền lợi về sức khỏe, thu nhập đời sống của người lao động không ngừng được nâng cao, năm sau cao hơn năm trước.</string>
    <string name="extraction_system1">Ngoài các Trung tâm phát hàng tại Hà Nội, Đà Nẵng và TP. Hồ Chí Minh, các bưu gửi EMS được phát tới người nhận thông qua hệ thống phát c63 Bưu điện tỉnh, thành phố trực thuộc Tổng Công ty Bưu điện Việt Nam.</string>
    <string name="extraction_system2">Tại các Bưu điện trung tâm tỉnh, huyện, khu vực đã thành lập 655 Bưu cục phát và giao nhiệm vụ quản lý tuyến phát cho 817 Bưu cục giao dịch cấp 3 để tổ chức đi phát, thu gom tại địa chỉ khách hàng và quản lý khâu sau phát. Tại các địa bàn trung tâm tỉnh lỵ, huyện lỵ và các xã có gần 11.800 bưu tá thực hiện phát, thu gom bưu gửi và chuyển phát bưu phẩm, bưu kiện từ trung tâm huyện xuống các bưu cục 3, điểm BĐ-VHX với tổng số tuyến phát là 11.900 tuyến.</string>
    <string name="hint_address_delivery">Địa chỉ giao hàng</string>
    <string name="hint_info_parcel">Thông tin bưu gửi</string>
    <string name="hint_money_collect">Tiền thu hộ</string>
    <string name="lbl_business_license">Giấy chứng nhận Đăng ký Kinh doanh số</string>
    <string name="lbl_carrier_network">Mạng vận chuyển</string>
    <string name="lbl_employees">Nhân sự</string>
    <string name="lbl_extraction_system">Hệ thống khai thác</string>
    <string name="lbl_name_short">Tên viết tắt</string>
    <string name="lbl_name_short_international">Tên viết tắt quốc tế</string>
    <string name="lbl_name_transaction">Tên giao dịch</string>
    <string name="lbl_name_transaction_international">Tên giao dịch quốc tế</string>
    <string name="lbl_network_systems">Hệ thống mạng lưới</string>
    <string name="lbl_overview">Tổng quan</string>
    <string name="lbl_postal_license">Giấy phép bưu chính</string>
    <string name="lbl_send_advise">Gợi ý cải tiến</string>
    <string name="lbl_send_report_error">Gửi báo cáo lỗi</string>
    <string name="lbl_transmitter_system">Hệ thống phát</string>
    <string name="locale">vn</string>
    <string name="name">Họ và tên</string>
    <string name="name_short">TỔNG CÔNG TY EMS</string>
    <string name="name_short_international">EMS VIỆT NAM</string>
    <string name="name_transaction">TỔNG CÔNG TY CHUYỂN PHÁT NHANH BƯU ĐIỆN – CÔNG TY CỔ PHẦN</string>
    <string name="name_transaction_international">VNPOST EXPRESS CORPORATION</string>
    <string name="network_systems1">Ngoài hệ thống gần 50 bưu cục giao dịch trực thuộc Tổng công ty tại Hà Nội, Đà Nẵng và TP. Hồ Chí Minh, dịch vụ chuyển phát nhanh EMS được cung cấp bởi 63 Bưu điện Tỉnh, Thành phố trên toàn quốc, tới tận các huyện, xã, biên giới và hải đảo, bao gồm:</string>
    <string name="network_systems2">Hệ thống điểm phục vụ: hơn 13.000 điểm, bán kính phục vụ bình quân đạt 2,93 km/điểm đảm bảo mỗi xã có tối thiểu một điểm phục vụ, số dân phục vụ bình quân đạt hơn 7.100 người/điểm, trong đó:</string>
    <string name="network_systems3">64 bưu cục giao dịch cấp 1, 760 bưu cục giao dịch cấp 2, 1.793 bưu cục giao dịch cấp 3, 8.184 Bưu điện - Văn hóa xã (BĐ-VHX), 434 đại lý bưu điện, 43 Kiốt, 1.460 thùng thư công cộng độc lập</string>
    <string name="note_suggest_address">Bạn nên sử dụng chức năng gợi ý địa chỉ để có được thông tin địa chỉ chính xác nhất.</string>
    <string name="overview">Tổng công ty Chuyển phát nhanh Bưu điện - CTCP đã được thành lập vào ngày 24/01/2005 theo Quyết định phê duyệt Đề án số 29/QĐ-ĐABC-HĐQT của Hội đồng quản trị Tổng Công ty Bưu chính Viễn thông Việt Nam, nay là Tập đoàn Bưu chính viễn thông Việt Nam (VNPT) với 3 chi nhánh tại Hà Nội, Đà Nẵng và TP. Hồ Chí Minh.</string>
    <string name="overview2">Chính thức đi vào hoạt động từ ngày 01/01/2006, là đơn vị duy nhất được Tổng công ty Bưu điện Việt Nam cho phép quản lý, khai thác và kinh doanh dịch vụ chuyển phát nhanh EMS trong nước và quốc tế. EMS cũng là thương hiệu dịch vụ chuyển phát toàn cầu của liên minh bưu chính thế giới UPU, hiện đang được khai thác bởi bưu chính của gần 200 quốc gia và vùng lãnh thổ trên toàn thế giới.</string>
    <string name="overview3">Nhằm năng lực tài chính, mở ra nhiều cơ hội phát triển trong hoạt động kinh doanh, năm 2013 Tổng công ty thực hiện tăng vốn điều lệ từ 70 tỷ đồng lên 91,591 tỷ đồng theo Nghị quyết Đại hội đồng cổ đông thường niên năm 2013. Trong kỳ Đại hội đồng cổ đông thường niên năm ….vốn điều lệ của Tổng Công ty cũng đã được tiếp tục tăng lên…</string>
    <string name="overview4">Năm 2017, thực hiện chỉ đạo của Tổng Công ty Bưu điện Việt Nam, Công ty đã hoàn tất đề án chuyển đổi mô hình từ Công ty sang Tổng công ty. Cũng trong năm 2017, Chi nhánh Hà Nội được thành lâp điều chỉnh và hoàn thiện mô hình tổ chức sản xuất tại Tổng Công ty, đáp ứng nhu cầu phát triển SXKD trong tình hình mới.</string>
    <string name="phone">Số điện thoại</string>
    <string name="postal_license">Giấy phép bưu chính số 575/GP - BTTTT cấp ngày 22/12/2017</string>
    <string name="receiver_point">Điểm trả hàng %1$s</string>
    <string name="title_dialog_report">Báo cáo vấn đề</string>
    <string name="transmitter_system1">Ngoài các Trung tâm phát hàng tại Hà Nội, Đà Nẵng và TP. Hồ Chí Minh, các bưu gửi EMS được phát tới người nhận thông qua hệ thống phát c63 Bưu điện tỉnh, thành phố trực thuộc Tổng Công ty Bưu điện Việt Nam.</string>
    <string name="transmitter_system2">Tại các Bưu điện trung tâm tỉnh, huyện, khu vực đã thành lập 655 Bưu cục phát và giao nhiệm vụ quản lý tuyến phát cho 817 Bưu cục giao dịch cấp 3 để tổ chức đi phát, thu gom tại địa chỉ khách hàng và quản lý khâu sau phát. Tại các địa bàn trung tâm tỉnh lỵ, huyện lỵ và các xã có gần 11.800 bưu tá thực hiện phát, thu gom bưu gửi và chuyển phát bưu phẩm, bưu kiện từ trung tâm huyện xuống các bưu cục 3, điểm BĐ-VHX với tổng số tuyến phát là 11.900 tuyến.</string>
</resources>