<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_2x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_name_transaction" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/name_transaction" />
            <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_name_short" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/name_short" />
            <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_name_transaction_international" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/name_transaction_international" />
            <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_name_short_international" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/name_short_international" />
            <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_business_license" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/business_license" />
            <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_postal_license" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/postal_license" />
            <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_overview" android:textAllCaps="true" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/overview" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/overview2" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/overview3" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/overview4" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_employees" android:textAllCaps="true" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/employees1" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/employees2" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/employees3" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_network_systems" android:textAllCaps="true" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/network_systems1" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/network_systems2" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/network_systems3" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_carrier_network" android:textAllCaps="true" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/carrier_network1" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/carrier_network2" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/carrier_network3" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/carrier_network4" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_extraction_system" android:textAllCaps="true" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/extraction_system1" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/extraction_system2" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/lbl_transmitter_system" android:textAllCaps="true" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:text="@string/transmitter_system1" />
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="normal" android:textColor="@color/textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_x1x" android:layout_marginBottom="@dimen/dimen_2x" android:text="@string/transmitter_system2" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>