<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_x1x" android:layout_marginRight="@dimen/dimen_x1x" android:layout_marginBottom="@dimen/dimen_2x" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/dimen_1x" app:cardElevation="@dimen/dimen_1x"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginBottom="@dimen/dimen_1x">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="@color/colorPrimarySecondary" android:layout_gravity="center_vertical" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_2x" android:layout_marginRight="@dimen/dimen_2x" android:text="@string/receiver_point" />
            <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center|right" android:id="@id/btn_cancel" android:background="@drawable/bg_press_red" android:paddingLeft="@dimen/dimen_3x" android:paddingTop="@dimen/dimen_05x" android:paddingRight="@dimen/dimen_3x" android:paddingBottom="@dimen/dimen_05x" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_" />
        </LinearLayout>
        <com.google.android.material.textfield.MaterialAutoCompleteTextView android:id="@id/edt_phone" android:layout_marginTop="@dimen/dimen_1x" android:text="" android:hint="@string/phone" android:maxLength="11" android:inputType="phone" style="@style/EditTextBase.StyleEdittextUrban" />
        <EditText android:id="@id/edt_name" android:layout_marginTop="@dimen/dimen_1x" android:text="" android:hint="@string/name" android:maxLength="50" android:inputType="textCapWords" style="@style/EditTextBase.StyleEdittextUrban" />
        <com.emsportal.widget.CurrencyEditText android:id="@id/edt_money_collect" android:layout_marginTop="@dimen/dimen_1x" android:text="" android:hint="@string/hint_money_collect" android:maxLength="14" android:inputType="number" app:groupDivider="." app:locale="@string/locale" style="@style/EditTextBase.StyleEdittextUrban" />
        <EditText android:id="@id/edt_info_parcel" android:layout_marginTop="@dimen/dimen_1x" android:text="" android:hint="@string/hint_info_parcel" android:maxLength="500" android:inputType="textCapWords" android:imeOptions="actionDone" style="@style/EditTextBase.StyleEdittextUrban" />
        <EditText android:enabled="false" android:textColor="@color/textColorSecondary" android:id="@id/edt_receiver_point" android:layout_marginTop="@dimen/dimen_1x" android:text="" android:hint="@string/hint_address_delivery" android:maxLength="150" android:inputType="textMultiLine" style="@style/EditTextBase.StyleEdittextUrban" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_2x" android:layout_marginTop="@dimen/dimen_1x" android:layout_marginRight="@dimen/dimen_2x" android:layout_marginBottom="@dimen/dimen_1x">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton android:textSize="@dimen/text_size_small" android:id="@id/btn_google_map_address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dimen_1x" android:text="@string/button_text_gg_map_sugest" app:backgroundTint="@color/colorPrimarySecondary" />
                <com.google.android.material.button.MaterialButton android:textSize="@dimen/text_size_small" android:id="@id/btn_fill_address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_1x" android:text="@string/button_text_fill_address" />
            </LinearLayout>
            <TextView android:textSize="@dimen/text_size_small" android:textStyle="italic" android:textColor="@color/textColorSecondary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_05x" android:text="@string/note_suggest_address" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>